// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Badge
        </p>
      </section>
    </div>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="Label"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              Label
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Badge
        </p>
      </section>
    </div>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 iebjaw Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          1-Digit
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="21"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              21
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          2-Digit
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="321"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              321
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          3-Digit
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="4321"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              4321
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          4-Digit
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="9+"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              9+
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Max 10
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="99+"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              99+
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Max 100
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="999+"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              999+
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Max 1k
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="9999+"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              9999+
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Max 10k
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
            id={null}
            label="Info"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              Info
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Info
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 iaJSbE"
            id={null}
            label="Success"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              Success
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Success
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dzizyc"
            id={null}
            label="Warning"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              Warning
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Warning
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="Alert"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              Alert
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Alert
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Top-Right
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 cpakTw"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Bottom-Right
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 iYhgcQ"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Top-Left
        </p>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Badge__BadgeContainer-sc-1rnxbq0-0 fLaBfc"
          id={null}
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
            id={null}
            label="1"
            style={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Bottom-Left
        </p>
      </section>
    </div>
  </section>
</div>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Badge
      </p>
    </section>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        1-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="21"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            21
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        2-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="321"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            321
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        3-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="4321"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            4321
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        4-Digit
      </p>
    </section>
  </div>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="9+"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            9+
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Max 10
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="99+"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            99+
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Max 100
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="999+"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            999+
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Max 1000
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="9999+"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            9999+
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Max 10k
      </p>
    </section>
  </div>
</section>
`;

exports[` 7`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
          id={null}
          label="Info"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            Info
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iaJSbE"
          id={null}
          label="Success"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            Success
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Success
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dzizyc"
          id={null}
          label="Warning"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            Warning
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Warning
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="Alert"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            Alert
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRfulb"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iYhgcQ"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Top-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 fLaBfc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Bottom-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Top-Right
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 cpakTw"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
          id={null}
          label="1"
          style={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            letterSpacing="0.2px"
          >
            1
          </p>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Bottom-Right
      </p>
    </section>
  </div>
</section>
`;
